<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SystemUITest</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_system_status_test">System status test</string>
    <string name="pref_header_hifi">HIFI</string>
    <string name="pref_content_hifi">Open the hifi function</string>
    <string name="pref_header_nfc">NFC</string>
    <string name="pref_content_nfc">Open the nfc function</string>
    <string name="pref_header_sps">SPS</string>
    <string name="pref_content_sps">Enter the sps mode</string>
    <string name="pref_header_smart_pause">Smart Pause</string>
    <string name="pref_content_smart_pause"> Smart Pause  is opening</string>
    <string name="pref_header_vistor_mode">Vistor Mode</string>
    <string name="pref_content_vistor_mode">Enter the Vistor Mode</string>
    <string name="pref_header_face_dect">FACE DECT</string>
    <string name="pref_content_face_dect">Have dected the face</string>
    <string name="pref_header_gesture">Camera Gesture</string>
    <string name="pref_content_gesture">Have dected the gesture</string>
    <string name="system_status">Enter System Status Test</string>
    <string name="title_activity_full_screen_test">FullScreenTestActivity</string>
    <string name="fullscreen_statusbar_test">Statusbar fullscreen test</string>
    <string name="fullscreen_systemui_flag_visible">SYSTEM_UI_FLAG_VISIBLE</string>
    <string name="fullscreen_systemui_flag_fullscreen">SYSTEM_UI_FLAG_FULLSCREEN</string>
    <string name="fullscreen_systemui_flag_layout_fullscreen">SYSTEM_UI_FLAG_LAYOUT_FULLSCREEN</string>
    <string name="fullscreen_systemui_flag_layout_stable">SYSTEM_UI_FLAG_LAYOUT_STABLE</string>
    <string name="fullscreen_systemui_flag_immersive">SYSTEM_UI_FLAG_IMMERSIVE</string>
    <string name="fullscreen_systemui_flag_immersive_sticky">SYSTEM_UI_FLAG_IMMERSIVE_STICKY</string>
    <string name="fullscreen_view_invisible">VIEW_FLAG_INVISIBLE</string>
    <string name="fullscreen_systemui_flag_combine">SYSTEM_UI_FLAG_FULLSCREEN_IMMERSIVE_STABLE</string>
    <string name="fullscreen_systemui_flag_combine_one">SYSTEM_UI_FLAG_LAYOUT_FULLSCREEN_STABLE</string>
    <string name="title_activity_battery_warning_test">BatteryWarningTestActivity</string>
    <string name="battery_level_test">Battery warning test</string>
    <string name="battery_level_guide">"    Please change the broadcast action Intent.ACTION_BATTERY_CHANGED to
    systemui.test.battery.level on which the module need be tested"</string>
    <string name="battery_level_input_hint">Please input battery level :</string>
    <string name="battery_status_input_hint">Please select battery status:</string>
    <string name="battery_plugged_hint">please select if the charged is plugged:</string>
    <string name="battery_test_send">Send the selected content</string>
    <string name="title_activity_recent_task_test">RecentTaskTestActivity</string>
    <string name="slect_type">Please choice</string>
    <string name="recent">Recent task</string>
    <string name="running">Running task</string>
    <string name="recent_task_test">Recent task test</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_normal_notification_test">NormalNotificationTestActivity</string>
    <string name="title_activity_custom_notification_test">CustomNotificationTestActivity</string>
    <string name="normal_notification_test">Normal Notification Test</string>
    <string name="custom_notification_test">Custom Notification Test</string>
    <string name="noti_priority_type">Priority:</string>
    <string name="noti_default_type">Default:</string>
    <string name="noti_ongoing">Ongoing</string>
    <string name="noti_auto_cancel">AutoCancel</string>
    <string name="base_notification_para">Base notification parameter：</string>
    <string name="noti_category_type">Category:</string>
    <string name="noti_secret_type">Secret:</string>
    <string name="noti_flag_label">Notification Flag:</string>
    <string name="base_notification_title">This is notification title</string>
    <string name="base_notification_content">This is notification content</string>
    <string name="base_notification_ticker">This is notification ticker message</string>
    <string name="noti_title_label">Input notification title</string>
    <string name="noti_content_label">Input notification content</string>
    <string name="noti_ticker_label">Input notification ticker</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_select_flag">Select Flag</string>
    <string name="notification_style">Different style notification send:</string>
    <string name="noti_action_label">Input Action Number</string>
    <string name="action1_content_label">Action1 content:</string>
    <string name="action2_content_label">Action2 content:</string>
    <string name="action3_content_label">Action3 content:</string>
    <string name="base_notification">Base Notification Style</string>
    <string name="big_text_notification">Big Text Notification Style</string>
    <string name="inbox_notification">Inbox Notification Style</string>
    <string name="big_picture_notification">Big Picture Notification Style</string>
    <string name="big_text_content">Welcome to Training for Android developers.Welcome to Training for Android developers.Welcome to Training for Android developers. </string>
    <string name="big_text_notification_title">This is big text notification title</string>
    <string name="inbox_notification_title">This is inbox notification title</string>
    <string name="big_picture_notification_title">This is big picture notification title</string>

    <string name="activty_systemui_demo_mode">SystemUI demo mode</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_clock">Clock</string>
    <string name="nav_item_battery">Battery</string>
    <string name="nav_item_network">NetWork</string>
    <string name="nav_item_bars">Bars</string>
    <string name="nav_item_status">Status</string>
    <string name="nav_item_notification">Notification</string>
    <string name="title_clock">Clock</string>
    <string name="title_battery">Battery</string>
    <string name="title_network">NetWork</string>
    <string name="title_bars">Bars</string>
    <string name="title_status">Status</string>
    <string name="title_notification">Notification</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="clock_test_lint">Testing status bar clock, please select time</string>
    <string name="test_start">Test</string>
    <string name="time_type">hh:mm</string>
    <string name="bar_test_lint">Test status bar transitions four mode</string>
    <string name="slect_bar_type">Transitions mode:</string>
    <string name="bar_result_label">Result:</string>
</resources>
