<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.vivo.test.systemui.activity.notification.NormalNotificationTestActivity">
        <TextView
            android:layout_marginTop="10dp"
            android:background="#800000ff"
            android:text="@string/base_notification_para"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/noti_priority_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/noti_priority" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/noti_default_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/noti_default" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/noti_category_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/noti_category" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/noti_secret_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/noti_secret" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noti_flag_label"
                />
            <EditText
                android:id="@+id/text_noti_flag"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/bt_noti_flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_select_flag"
                android:onClick="onClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/noti_title_label"
                />
            <EditText
                android:id="@+id/noti_title"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/noti_content_label"
                />
            <EditText
                android:id="@+id/noti_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/noti_ticker_label"/>
        <EditText
            android:id="@+id/noti_ticker"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/noti_action_label"
            />
            <EditText
                android:id="@+id/noti_action_num"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="numberDecimal"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/bt_action_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_ok"
                android:onClick="onClick"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/noti_action1"
            android:layout_marginTop="5dp"
            android:layout_marginStart="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/action1_content_label"
                />
            <EditText
                android:id="@+id/noti_action1_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/noti_action2"
            android:layout_marginTop="5dp"
            android:layout_marginStart="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/action2_content_label"
                />
            <EditText
                android:id="@+id/noti_action2_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/noti_action3"
            android:layout_marginTop="5dp"
            android:layout_marginStart="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/action3_content_label"
                />
            <EditText
                android:id="@+id/noti_action3_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <TextView
            android:layout_marginTop="20dp"
            android:background="#800000ff"
            android:text="@string/notification_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bt_base_noti"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/base_notification"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/bt_bigtext_noti"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/big_text_notification"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/bt_inbox_noti"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/inbox_notification"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/bt_bitpictrue_noti"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/big_picture_notification"
            android:onClick="onClick"/>
    </LinearLayout>
</ScrollView>
