<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vivo.test.systemui.fragment.BarFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bar_test_lint" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/slect_bar_type"
            android:layout_height="wrap_content" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/bar_type"
         />
    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bar_result_label"
       />

    <View
        android:id="@+id/bar_result"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60px"/>

    <Button
        android:id="@+id/bt_bar_mode"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/test_start"/>

</LinearLayout>
