<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vivo.test.systemui.fragment.ClockFragment">


    <TextView
        android:id="@+id/clock_label"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:text="@string/clock_test_lint"
        android:textStyle="bold"/>

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/timePicker"
        android:layout_below="@+id/clock_label"
        android:layout_centerHorizontal="true" />


    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/hour_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_type"/>
        <Button
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_start"
            android:id="@+id/clock_test" />
        </LinearLayout>


</RelativeLayout>
